--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@
     position: relative;
     border-radius: 8px;
     box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, .6);
 }
 .service-item:hover {
     position: relative;
@@ -185,13 +185,14 @@
 }
 
 .service-item .service-text .service-icon {
-    width: 140px;
-    height: 140px;
-    padding: 15px;
-    margin-top: -70px;
+    width: 120px;
+    height: 80px;
+    padding-top: 23px;
+    margin-top: -50px;
     margin-bottom: 40px;
-    background: #FFFFFF;
-    border-radius: 140px;
+    background: #ffffff;
+    border-radius: 50%;
+    border: 3px solid #fff;
     overflow: hidden;
     box-shadow: 0 0 60px rgba(0, 0, 0, .1);
 }
