--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
     }
   }
 /* Estilos para el modal */
+
+*{
+  user-select: none;
+}
 .modal_calculo {
     display: none;
     position: fixed;
