--- a/php_dalto/estilo.css
+++ b/php_dalto/estilo.css
@@ -1,17 +1,12 @@
 * {
-	padding: 0;
-	margin: 0;
+	
 	font-family: century gothic;
 	text-align: center;
 }
 
 form {
-	padding: 50px 20px;
-	background-color: #ededed;
-	margin: calc(25% + 100px);
 	margin-top: 70px;
 	padding-top: 28px;
-	margin-bottom: 30px
 }
 
 h1 {
@@ -21,7 +16,6 @@ h1 {
 }
 
 input {
-	width: calc(100% - 20px);
 	padding: 9px;
 	margin: auto;
 	margin-top: 12px;
@@ -31,7 +25,6 @@ input {
 input[type='submit']{
 	background-color: #48e;
 	color: #fff;
-	width: calc(80% - 20px);
 	margin: 0 10%;
 	margin-top: 22px;
 	border: none;
@@ -43,7 +36,8 @@ input[type='submit']{
 	width: 100%;
 	padding: 12px;
 	background-color: #1e6;
-	color: #fff
+	color: #fff;
+	
 }
 .bad {
 	text-align: center;
