--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: #f0f2f5;
     padding: 20px;
     border-radius: 5px;
     animation: cubic-bezier(0.215, 0.610, 0.355, 1);
